// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineMessage tests is a basic snapshot 1`] = `
<p
  class="flex items-center text-75 text-blue-700 dark:text-blue-400 "
  id="test-inline-message"
  role="alert"
>
  <span
    aria-hidden="true"
    class="mr-1 w-6 h-6"
  >
    <svg
      class="fill-current"
      viewBox="0 0 20 20"
    >
      <use
        href="undefined#connectivity"
      />
    </svg>
  </span>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores cupiditate, voluptas non ab soluta. Non odit facere quae tempora.
</p>
`;

exports[`InlineMessage tests is a snapshot with a "confirmation" type appearance 1`] = `
<p
  class="flex items-center text-75 text-green-800 dark:text-green-400 "
  id="test-inline-message"
  role="alert"
>
  <span
    aria-hidden="true"
    class="mr-1 w-6 h-6"
  >
    <svg
      class="fill-current"
      viewBox="0 0 20 20"
    >
      <use
        href="undefined#confirmation"
      />
    </svg>
  </span>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores cupiditate, voluptas non ab soluta. Non odit facere quae tempora.
</p>
`;

exports[`InlineMessage tests is a snapshot with a "connectivity" type appearance 1`] = `
<p
  class="flex items-center text-75 text-blue-700 dark:text-blue-400 "
  id="test-inline-message"
  role="alert"
>
  <span
    aria-hidden="true"
    class="mr-1 w-6 h-6"
  >
    <svg
      class="fill-current"
      viewBox="0 0 20 20"
    >
      <use
        href="undefined#connectivity"
      />
    </svg>
  </span>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores cupiditate, voluptas non ab soluta. Non odit facere quae tempora.
</p>
`;

exports[`InlineMessage tests is a snapshot with a "error" type appearance 1`] = `
<p
  class="flex items-center text-75 text-red-700 dark:text-red-400 "
  id="test-inline-message"
  role="alert"
>
  <span
    aria-hidden="true"
    class="mr-1 w-6 h-6"
  >
    <svg
      class="fill-current"
      viewBox="0 0 20 20"
    >
      <use
        href="undefined#error"
      />
    </svg>
  </span>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores cupiditate, voluptas non ab soluta. Non odit facere quae tempora.
</p>
`;

exports[`InlineMessage tests is a snapshot with a "info" type appearance 1`] = `
<p
  class="flex items-center text-75 text-purple-700 dark:text-purple-400 "
  id="test-inline-message"
  role="alert"
>
  <span
    aria-hidden="true"
    class="mr-1 w-6 h-6"
  >
    <svg
      class="fill-current"
      viewBox="0 0 20 20"
    >
      <use
        href="undefined#info"
      />
    </svg>
  </span>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores cupiditate, voluptas non ab soluta. Non odit facere quae tempora.
</p>
`;

exports[`InlineMessage tests is a snapshot with a "warning" type appearance 1`] = `
<p
  class="flex items-center text-75 text-orange-800 dark:text-yellow-300 "
  id="test-inline-message"
  role="alert"
>
  <span
    aria-hidden="true"
    class="mr-1 w-6 h-6"
  >
    <svg
      class="fill-current"
      viewBox="0 0 20 20"
    >
      <use
        href="undefined#warning"
      />
    </svg>
  </span>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores cupiditate, voluptas non ab soluta. Non odit facere quae tempora.
</p>
`;

exports[`InlineMessage tests is a snapshot with the icon on the left 1`] = `
<p
  class="flex items-center text-75 text-blue-700 dark:text-blue-400 "
  id="test-inline-message"
  role="alert"
>
  <span
    aria-hidden="true"
    class="mr-1 w-6 h-6"
  >
    <svg
      class="fill-current"
      viewBox="0 0 20 20"
    >
      <use
        href="undefined#connectivity"
      />
    </svg>
  </span>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores cupiditate, voluptas non ab soluta. Non odit facere quae tempora.
</p>
`;

exports[`InlineMessage tests is a snapshot with the icon on the right 1`] = `
<p
  class="flex items-center text-75 text-blue-700 dark:text-blue-400 "
  id="test-inline-message"
  role="alert"
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores cupiditate, voluptas non ab soluta. Non odit facere quae tempora.
  <span
    aria-hidden="true"
    class="mr-1 w-6 h-6"
  >
    <svg
      class="fill-current"
      viewBox="0 0 20 20"
    >
      <use
        href="undefined#connectivity"
      />
    </svg>
  </span>
</p>
`;
